bug-046499-align how it works columns on home page

--- a/application/views/home/page-css/index.css
+++ b/application/views/home/page-css/index.css
@@ -791,3 +791,9 @@
         margin-top: 15px;
     }
 }
+
+@media (min-width:768px) and (max-width:1023px){
+
+    .is-landing .tabs-vertical ul li{-webkit-box-flex:1; -ms-flex:1;flex:1;width: 33.3%;}
+    
+ }
